# simple_ai_trading

./: .codecov.yml  .gitattributes  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .yamllint  AGENTS.md  CONTRIBUTING.md  Dockerfile  LIVE_TESTNET_RUNBOOK.md  PLANNING.md  README.md  SECURITY.md  pyproject.toml  run-gui.cmd  run-gui.sh  run-shell.cmd  run-shell.sh
.agents/skills/ai-regression-testing/: SKILL.md
.agents/skills/cocoindex-code-search/: SKILL.md
.agents/skills/context-budget/: SKILL.md
.agents/skills/docker-patterns/: SKILL.md
.agents/skills/docs-knowledge-maintainer/: SKILL.md
.agents/skills/karpathy-guidelines/: SKILL.md
.agents/skills/python-patterns/: SKILL.md
.agents/skills/search-first/: SKILL.md
.agents/skills/security-review/: SKILL.md
.agents/skills/source-audit/: SKILL.md
.agents/skills/tdd-workflow/: SKILL.md
.agents/skills/trading-risk-gates/: SKILL.md
.agents/skills/tui-terminal-navigation/: SKILL.md
.agents/skills/verification-loop/: SKILL.md
.github/: dependabot.yml  readme_badges.json
.github/actions/windows-beta-release/: action.yml
.github/requirements/: vulture-ci.txt
.github/workflows/: ci.yml  release.yml  ruff.yml  super-linter.yml  vulture.yml
docs/: AGENT_START.md  AGENT_WORKFLOWS.md  AI_COMMIT_IDENTITY.md  AI_MODEL_SELECTION.md  DATA_PROVENANCE_POLICY.md  DESIGN_RESEARCH_NOTES_2026-04-28.md  DESIGN_RESEARCH_NOTES_2026-07-05.md  DIRECTML_GPU.md  FREE_SIGNAL_SOURCE_INVENTORY.md  INTEGRATIONS_PLAN.md  LIVE_MARKET_SIMULATION.md  MODEL_AND_SIGNAL_VALIDATION.md  MODEL_RESEARCH_AND_OPTIMIZATION.md  MODEL_TRAINING_INSPIRATION.md  OPEN_SOURCE_GAP_ANALYSIS_AND_RULESET_2026-07-05.md  POLYMARKET_PAPER_TRADING.md  SIMILAR_TRADING_REPOS_REVIEW.md  ai_model_benchmark_latest.json  ai_model_benchmark_legacy_20260710.json  release.md
docs/ai/foundation/: fincast-directml-preflight.json
docs/microstructure/: availability.json
docs/model-research/: INSTITUTIONAL_DIRECTION_AUDIT_2026-07-11.md
docs/optimization/: README.md  round-001-market-quality.md  round-001-results.json  round-002-learning-feedback-gate.md  round-003-data-coverage-api-efficiency.md  round-004-regime-entry-gate.md  round-005-foundation-forecast-gate.md
docs/reference/: cocoindex-code-agent-benchmark-2026-07-11-cases.json  cocoindex-code-agent-benchmark-2026-07-11.md
native/windows/: CMakeLists.txt
native/windows/src/: main.cpp
src/simple_ai_bitcoin_trading_binance/: advanced_model.py  backtest.py  backtest_panel.py  cli.py  compute.py  external_signals.py  model.py  objective.py  risk_controls.py  shell.py  source_grading.py  telemetry_store.py  training_suite.py  tui.py  types.py
src/simple_ai_trading/: __init__.py  action_hurdle_analysis.py  action_hurdle_tcn_model.py  advanced_model.py  ai_benchmark_claim.py  ai_factor_programs.py  ai_model_benchmark.py  ai_model_provenance.py  ai_review.py  ai_runtime.py  ai_start_gate.py  ai_trade_veto.py  ai_uplift.py  alpha_search.py  api.py  api_budget.py  assets.py  audit.py  autonomous.py  backtest.py  backtest_panel.py  barrier_competing_risk_analysis.py  barrier_competing_risk_tcn_model.py  barrier_payoff_data.py  binance_archive.py  binance_paper.py  bounded_alpha_lightgbm.py  categorical_payoff_lightgbm.py  causal_meta_label_ai_veto.py  causal_meta_label_model.py  chart.py  cli.py  command_contract.py  commission.py  compute.py  config.py  coordinator.py  cost_aware_utility_tcn_model.py  cross_asset_cost_data.py  cross_asset_cost_model.py  (+198 more)
tests/: test_action_hurdle_analysis.py  test_action_hurdle_tcn_model.py  test_action_value_depth_coverage.py  test_action_value_diagnostics.py  test_action_value_discovery.py  test_action_value_score_ablation.py  test_adaptive_action_screen.py  test_advanced_model.py  test_agent_workflows.py  test_ai_benchmark_claim.py  test_ai_benchmark_evidence.py  test_ai_factor_programs.py  test_ai_model_provenance_builder.py  test_ai_review.py  test_ai_runtime_and_parity.py  test_ai_uplift.py  test_alpha_search.py  test_api.py  test_api_budget.py  test_api_coverage.py  test_assets.py  test_audit.py  test_autonomous.py  test_backtest.py  test_backtest_coverage.py  test_backtest_panel.py  test_barrier_competing_risk_tcn_model.py  test_barrier_payoff_data.py  test_binance_archive.py  test_binance_paper.py  test_bounded_alpha_lightgbm.py  test_causal_meta_label_ai_veto.py  test_causal_meta_label_model.py  test_chart.py  test_cli.py  test_cli_coverage.py  test_cli_new_commands.py  test_cocoindex_agent_search.py  test_commission.py  test_compute.py  (+223 more)
tools/: ablate_action_value_scores.py  audit_action_value_depth_coverage.py  audit_data_provenance.py  audit_financial_terminology.py  benchmark_polymarket_storage_v4.py  build_ai_model_provenance.py  build_native_windows.ps1  build_round72_price_discovery_spec.py  build_round72_spot_perpetual_inventory.py  capture_native_windows_app.ps1  certify_round42_second_flow_source.py  cocoindex_agent_search.py  create_round35_direction_binding.py  create_round36_signal_decay_binding.py  create_round37_cross_asset_binding.py  create_round38_derivatives_binding.py  create_round39_causal_refit_binding.py  create_round40_causal_meta_label_binding.py  create_round41_prequential_meta_label_binding.py  create_round42_second_flow_binding.py  create_round43_stateful_binding.py  create_round44_distributional_tcn_binding.py  create_round45_joint_sam_tcn_binding.py  create_round46_stability_tcn_binding.py  create_round47_cost_aware_utility_tcn_binding.py  create_round48_minute_logistic_mixture_binding.py  create_round49_action_hurdle_binding.py  create_round50_barrier_competing_risk_binding.py  create_round51_execution_binding.py  create_round52_execution_binding.py  create_round53_executable_csm_binding.py  create_round55_bounded_alpha_binding.py  create_round56_paired_action_binding.py  create_round57_queue_censored_make_take_binding.py  create_round61_carry_event_manifest.py  diagnose_action_value_discovery.py  diagnose_round32_failure.py  diagnose_round33_failure.py  diagnose_round34_failure.py  diagnose_round49_action_value_failure.py  (+120 more)
(+607 files in other folders)
