[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-ai-trading"
version = "0.1.0b1"
description = "Autonomous BTC/ETH/SOL day-trading CLI and Windows app with conservative testnet-first safeguards"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "defusedxml>=0.7.1,<1",
    "duckdb==1.5.4",
    "lightgbm==4.6.0",
    "numba==0.66.0",
    "numpy==2.2.6",
    "requests>=2.32.0,<3",
    "textual==8.1.1",
    "websockets==16.0",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.4,<3; platform_system != 'Windows'",
    "torch-directml==0.2.5.dev240914; platform_system == 'Windows' and python_version < '3.12'",
]
terminal-test = [
    "pyte>=0.8.2,<1",
    "pywinpty>=3.0.3,<4; platform_system == 'Windows'",
    "pexpect>=4.9.0,<5; platform_system != 'Windows'",
]
microstructure = [
    "hftbacktest==2.4.4",
]
foundation-ai = [
    "beartype==0.20.2",
    "einops==0.8.1",
    "einx==0.3.0",
    "huggingface_hub==0.33.1",
    "pandas>=2.2,<4",
    "safetensors==0.6.2",
    "tqdm>=4.67,<5",
]

[project.scripts]
simple-ai-trading = "simple_ai_trading.cli:main"
simple-ai-trading-windows = "simple_ai_trading.windows_app:main"

[tool.pytest.ini_options]
addopts = ["-q"]

[tool.coverage.run]
branch = true
source = ["src/simple_ai_trading"]
omit = ["src/simple_ai_trading/__main__.py"]

[tool.coverage.report]
skip_empty = true
show_missing = true
# Ratchet the existing 34k-line suite while CI separately requires 95% on
# changed executable lines. Raise this floor as repository debt is retired.
fail_under = 83
