[build-system]
requires = ["setuptools==83.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-ai-trading"
version = "0.1.0b1"
description = "Autonomous BTC/ETH/SOL day-trading CLI and Windows app with conservative testnet-first safeguards"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "defusedxml>=0.7.1,<1",
    "duckdb==1.5.4",
    "lightgbm==4.6.0",
    "numba==0.66.0",
    "numpy==2.2.6",
    "requests>=2.32.0,<3",
    "scipy==1.17.1",
    "textual==8.2.8",
    "websockets==16.1.1",
    "zstandard==0.25.0",
]

[project.optional-dependencies]
gpu = [
    "torch==2.13.0",
]
directml = [
    "torch==2.4.1; (platform_system == 'Windows' or platform_system == 'Linux') and python_version < '3.13'",
    "torch-directml==0.2.5.dev240914; (platform_system == 'Windows' or platform_system == 'Linux') and python_version < '3.13'",
]
terminal-test = [
    "pyte>=0.8.2,<1",
    "pywinpty>=3.0.3,<4; platform_system == 'Windows'",
    "pexpect>=4.9.0,<5; platform_system != 'Windows'",
]
microstructure = [
    "hftbacktest==2.4.4",
]
foundation-ai = [
    "einops==0.8.2",
    "huggingface_hub==1.24.0",
    "pandas>=2.2,<4",
    "safetensors==0.8.0",
    "tqdm>=4.67,<5",
]

[dependency-groups]
test = [
    "coverage==7.15.2",
    "diff-cover==10.3.0",
    "pytest==9.1.1",
    "ruff==0.15.22",
]
release = [
    "build==1.5.0",
]

[tool.uv]
required-version = "==0.11.29"

[project.scripts]
simple-ai-trading = "simple_ai_trading.cli:main"
simple-ai-trading-windows = "simple_ai_trading.windows_app:main"

[tool.pytest.ini_options]
addopts = ["-q"]

[tool.coverage.run]
branch = true
source = ["src/simple_ai_trading"]
omit = ["src/simple_ai_trading/__main__.py"]

[tool.coverage.report]
skip_empty = true
show_missing = true
precision = 2
# The 2026-07-16 Windows baseline is 75.95% across 75,696 measured statements
# and branches. Keep a small cross-platform margin for GPU-specific test skips;
# CI separately requires 95% coverage on changed executable lines.
fail_under = 75.0
